2013-02-02 Jesper Öqvist <jesper@cs.lth.se>

    * Template expansion warnings are printed to stderr